--- a/.config/rofi/config
+++ b/.config/rofi/config
@@ -1,13 +1,13 @@
-rofi.modi:                           window,run,drun
+rofi.modi:                           window,run,ssh
 rofi.width:                          50
 rofi.lines:                          15
 rofi.columns:                        1
-rofi.font:                           Fira Code 10
-rofi.color-normal:                   #191F17, #F6F6F5, #191F17, #445b67, #F6F6F5
-rofi.color-urgent:                   #191F17, #d6b48d, #22231D, #d6b48d, #F6F6F5
-rofi.color-active:                   #191F17, #DAD6D1, #191F17, #DAD6D1, #191F17
-rofi.color-window:                   #191F17, #445b67, #26333a
-rofi.bw:                             7
+rofi.font:                           roboto mono 10
+rofi.color-normal:                   #090c10, #adb1b9, #090c10, #8f7063, #adb1b9
+rofi.color-urgent:                   #090c10, #d6b48d, #22231D, #d6b48d, #adb1b9
+rofi.color-active:                   #090c10, #b6b18e, #090c10, #b6b18e, #090c10
+rofi.color-window:                   #090c10, #8f7063, #624d44
+rofi.bw:                             5
 rofi.location:                       0
 rofi.padding:                        5
 rofi.yoffset:                        0
@@ -18,8 +18,8 @@ rofi.ssh-client:                     ssh
 rofi.ssh-command:                    {terminal} -e {ssh-client} {host}
 rofi.run-command:                    {cmd}
 rofi.parse-hosts:                    true
-rofi.matching:                       fuzzy
-rofi.separator-style:                full
+rofi.matching:                       normal
+rofi.separator-style:                none
 rofi.scrollbar-width:                0
 rofi.kb-mode-next:                   Shift+Right,Control+Tab,Alt+l
 rofi.kb-mode-previous:               Shift+Left,Control+Shift+Tab,Alt+h
