--- a/.config/rofi/config
+++ b/.config/rofi/config
@@ -3,10 +3,10 @@ rofi.width:                          50
 rofi.lines:                          15
 rofi.columns:                        1
 rofi.font:                           roboto mono 10
-rofi.color-normal:                   #090c10, #adb1b9, #090c10, #8f7063, #adb1b9
-rofi.color-urgent:                   #090c10, #d6b48d, #22231D, #d6b48d, #adb1b9
-rofi.color-active:                   #090c10, #b6b18e, #090c10, #b6b18e, #090c10
-rofi.color-window:                   #090c10, #8f7063, #624d44
+rofi.color-normal:                   #02060c, #9ea6b3, #02060c, #344455, #9ea6b3
+rofi.color-urgent:                   #02060c, #d6b48d, #22231D, #d6b48d, #9ea6b3
+rofi.color-active:                   #02060c, #8c7696, #02060c, #8c7696, #02060c
+rofi.color-window:                   #02060c, #344455, #232f3a
 rofi.bw:                             5
 rofi.location:                       0
 rofi.padding:                        5
